--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ h5py==3.2.1
 iniconfig==1.0.1
 matplotlib==3.3.4
 numpy==1.20.1
-opencv-python==4.5.1.48
+opencv-python>=3.3
 pytest==6.1.1
 python-dateutil==2.8.1
 pytz==2021.1
