Update and resolve installation issues in pypi

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-h5py==3.2.1
-iniconfig==1.0.1
-matplotlib==3.3.4
-numpy==1.20.1
-opencv-python>=3.3
-pytest==6.1.1
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.3.1
-scikit-learn==0.24.1
-scipy==1.6.1
-simplejson==3.17.2
-sklearn==0.0
-tifffile==2021.3.5
+h5py==3.8.0
+iniconfig==2.0.0
+matplotlib==3.7.1
+numpy==1.24.3
+opencv-python==4.7.0.72
+pytest==7.3.1
+python-dateutil==2.8.2
+pytz==2023.3
+PyYAML==6.0
+scikit-learn==1.2.2
+scipy==1.10.1
+simplejson==3.19.1
+tifffile==2023.4.12
 tk==0.1.0
-yapf==0.30.0
+yapf==0.33.0
